<resources>
    <string name="app_name">Map Chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2FyaW1rODAiLCJhIjoiY2s4NDZxM3hqMWZ3eTNscGdlangzNGhjciJ9.ZD84q5quOcy8MTrWJaC2wQ</string>
    <string name="mapboc_access_style">mapbox://styles/sarimk80/ck7zsscfi19at1ip8me8fd9en</string>
    <string name="hint">Type a message</string>
    <string name="format">%1$tm %1$te,%1$tY</string>
    <string name="subHeading">where people connect with the world</string>
    <string name="google">Sign in</string>
    <string name="link"><a href="https://github.com/sarimk80/MapChat">More about this project</a></string>
    <string name="error">Permission Error</string>
    <string name="explain">This application requirs two permission network and location. The network permission to connect with the internet and location permission so we can display your location on the map, this way other people can see you on the map and can chat with you.</string>
    <string name="permission">Grant Permission</string>
    <string name="invite">INVITE</string>
</resources>
